@@ -120,6 +120,12 @@ have been regenerated by this task.</p>
       (&quot;yes&quot;/&quot;no&quot;). Default excludes are used when omitted.</td>
     <td valign="top" align="center">No</td>
   </tr>
+  <tr>
+    <td valign="top">preserveLastModified</td>
+    <td valign="top">Keep the file timestamp(s) even if the file(s)
+      is(are) modified.</td>
+    <td valign="top" align="center">No, defaults to false</td>
+  </tr>
 </table>
 <h3>Examples</h3>
 <pre>  &lt;replace file=&quot;${src}/index.html&quot; token=&quot;@@@&quot; value=&quot;wombat&quot;/&gt;</pre>
