@@ -87,6 +87,12 @@ See details in the documentation of the <a href="../CoreTypes/regexp.html#implem
     <td valign="top">The encoding of the file. <em>since Ant 1.6</em></td>
     <td align="center">No - defaults to default JVM encoding</td>
   </tr>
+  <tr>
+    <td valign="top">preserveLastModified</td>
+    <td valign="top">Keep the file timestamp(s) even if the file(s)
+      is(are) modified.</td>
+    <td valign="top" align="center">No, defaults to false</td>
+  </tr>
 </table>
 <h3>Examples</h3>
 <pre>
